[gd_scene load_steps=4 format=3 uid="uid://blatymkqenhre"]

[ext_resource type="PackedScene" uid="uid://u813xsggtl0s" path="res://game/entities/base_entity/base_entity.tscn" id="1_8h4xv"]
[ext_resource type="Script" path="res://game/entities/enemy/enemy.gd" id="2_7qbnr"]
[ext_resource type="PackedScene" uid="uid://dm4vkokf2rma7" path="res://game/entities/components/polygon_component/polygon_component.tscn" id="3_xlu8y"]

[node name="Enemy" groups=["enemy"] instance=ExtResource("1_8h4xv")]
collision_layer = 20
script = ExtResource("2_7qbnr")

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="." index="2"]

[node name="PolygonComponent" parent="." index="3" instance=ExtResource("3_xlu8y")]

[node name="HitBox" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 8

[node name="HitBoxCollisionPolygon" type="CollisionPolygon2D" parent="HitBox" index="0"]

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
